@@ -1,29 +1,29 @@
 package se.inera.intyg.certificateservice.application.common;
 
 import java.util.Collections;
-import java.util.List;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 import se.inera.intyg.certificateservice.application.certificate.dto.CertificateStatusTypeDTO;
 import se.inera.intyg.certificateservice.application.unit.dto.CertificatesQueryCriteriaDTO;
 import se.inera.intyg.certificateservice.domain.certificate.model.Status;
 import se.inera.intyg.certificateservice.domain.common.model.CertificatesRequest;
 import se.inera.intyg.certificateservice.domain.common.model.HsaId;
-import se.inera.intyg.certificateservice.domain.patient.model.PersonId;
-import se.inera.intyg.certificateservice.domain.patient.model.PersonIdType;
+import se.inera.intyg.certificateservice.domain.common.model.PersonId;
+import se.inera.intyg.certificateservice.domain.common.model.PersonIdType;
 
 @Component
 public class CertificatesRequestFactory {
 
   public CertificatesRequest create() {
     return CertificatesRequest.builder()
-        .statuses(Status.all())
+        .statuses(Status.unsigned())
         .build();
   }
 
   public CertificatesRequest create(CertificatesQueryCriteriaDTO queryCriteria) {
     return CertificatesRequest.builder()
-        .from(queryCriteria.getFrom())
-        .to(queryCriteria.getTo())
+        .modifiedFrom(queryCriteria.getFrom())
+        .modifiedTo(queryCriteria.getTo())
         .issuedByStaffId(
             queryCriteria.getIssuedByStaffId() != null
                 ? new HsaId(queryCriteria.getIssuedByStaffId())
@@ -38,16 +38,23 @@ public class CertificatesRequestFactory {
                 : null
         )
         .statuses(
-            containsStatusToMapToDraft(queryCriteria.getStatuses())
-                ? List.of(Status.DRAFT)
-                : Collections.emptyList()
+            queryCriteria.getStatuses() == null ? Collections.emptyList() :
+                queryCriteria.getStatuses()
+                    .stream()
+                    .map(this::convertStatus)
+                    .filter(Objects::nonNull)
+                    .toList()
         )
         .validCertificates(queryCriteria.getValidForSign())
         .build();
   }
 
-  private static boolean containsStatusToMapToDraft(List<CertificateStatusTypeDTO> statuses) {
-    return statuses == null || statuses.isEmpty()
-        || statuses.contains(CertificateStatusTypeDTO.UNSIGNED);
+  private Status convertStatus(CertificateStatusTypeDTO status) {
+    return switch (status) {
+      case UNSIGNED -> Status.DRAFT;
+      case SIGNED -> Status.SIGNED;
+      case LOCKED -> Status.LOCKED_DRAFT;
+      case LOCKED_REVOKED, REVOKED -> null;
+    };
   }
 }
